<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".calc.CalcActivity">

    <EditText
        android:id="@+id/editTextField1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/FIELD_1_HINT"
        android:inputType="number"
        tools:ignore="Autofill"
        tools:text="@string/FIELD_1_HINT" />

    <EditText
        android:id="@+id/editTextField2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/FIELD_2_HINT"
        android:inputType="number"
        tools:ignore="Autofill"
        tools:text="@string/FIELD_2_HINT" />

    <RadioButton
        android:id="@+id/radioButtonPlus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/OPERATION_PLUS"
        tools:text="@string/OPERATION_PLUS" />

    <RadioButton
        android:id="@+id/radioButtonMinus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/OPERATION_MINUS"
        tools:text="@string/OPERATION_MINUS" />

    <RadioButton
        android:id="@+id/radioButtonDivide"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/OPERATION_DIVIDE"
        tools:text="@string/OPERATION_DIVIDE" />

    <RadioButton
        android:id="@+id/radioButtonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/OPERATION_MULTIPLE"
        tools:text="@string/OPERATION_MULTIPLE" />

    <CheckBox
        android:id="@+id/checkboxFloatValues"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/FLOAT_VALUES" />

    <CheckBox
        android:id="@+id/checkboxSignedValues"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/SIGNED_VALUES" />

    <TextView
        android:id="@+id/textViewResult"
        style="@android:style/Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/RESULT_FIELD" />

    <Button
        android:id="@+id/buttonGetResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/CALCULATE_BUTTON"
        tools:text="@string/CALCULATE_BUTTON" />

</LinearLayout>